--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
+    <link rel="manifest" crossorigin="use-credentials" href="/manifest.json" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -15,7 +15,7 @@
     <meta name="msapplication-config" content="/browserconfig.xml" />
     <meta name="theme-color" content="#000" />
 
-    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="/global.css" />
     %svelte.head%
   </head>
   <body>
