Migration to Svelte 4 (#884)
* migration to Svelte 4

Run `npx svelte-migrate@latest svelte-4`

See: <https://svelte.dev/docs/v4-migration-guide>.

* migration to Svelte 4

Run `npx svelte-migrate@latest svelte-4`

See: <https://svelte.dev/docs/v4-migration-guide>.

* Run `npm i`

* Verify `package.json`

* Run `npm i --force`

* Uninstall every package

* Reinstall every package

* Run `npm create svelte@latest .`

TODO: Consolidate old config files with new config files.

* Go back to original configurations

* Disable 'svelte/no-at-html-tags' eslint rule

See: <https://sveltejs.github.io/eslint-plugin-svelte/rules/no-at-html-tags/>.

* `npm i`, `npm run all`

* team picker: error  '_' is defined but never used

```
26:48  error  '_' is defined but never used  @typescript-eslint/no-unused-vars
```

* navbar: keypress handlers must have an  ARIA role

32:3  error  A11y: <div> with click, keypress handlers must have an
ARIA role(a11y-no-static-element-interactions)  svelte/valid-compile

* DIVs with click handlers must have an ARIA role

Resolved error messages:
```
C:\Users\ethan\Documents\GitHub\acmcsuf.com\src\lib\components\select\select.svelte
  22:5   error  A11y: <div> with click, keypress handlers must have an ARIA role(a11y-no-static-element-interactions)  svelte/valid-compile
  29:11  error  A11y: <div> with click, keypress handlers must have an ARIA role(a11y-no-static-element-interactions)  svelte/valid-compile
```

* Update app.html

* Event.svelte: Non-interactive element <details> should not be assigned mouse or keyboard event listeners

C:\Users\ethan\Documents\GitHub\acmcsuf.com\src\routes\(site)\events\event.svelte
   39:3  error  A11y: Non-interactive element <details> should not be assigned mouse or keyboard event listeners.(a11y-no-noninteractive-element-interactions)  svelte/valid-compile

* Contributors: fix unused summary CSS

```
error  Unused CSS selector ".container li details

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="manifest" crossorigin="use-credentials" href="/manifest.json" />
@@ -19,6 +19,8 @@
     %sveltekit.head%
   </head>
   <body>
-    <div id="svelte">%sveltekit.body%</div>
+    <body data-sveltekit-preload-data="hover">
+      <div style="display: contents">%sveltekit.body%</div>
+    </body>
   </body>
 </html>
