--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,13 @@
     <meta name="msapplication-config" content="/browserconfig.xml" />
     <meta name="theme-color" content="#000" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="/global.css" />
     %sveltekit.head%
   </head>
