--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,7 @@
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
     <meta name="theme-color" content="#000" />
+    <script src="https://cdn.jsdelivr.net/npm/temporal-polyfill@0.3.0/global.min.js"></script>
 
     <link rel="stylesheet" href="/global.css" />
     %sveltekit.head%
